crates/sutura-app/tests/snapshots/anchor_mismatch.snap
---
source: crates/sutura-app/tests/golden/service.rs
expression: err.to_string()
---
metric active_subscriptions was expected to produce 59, and produced -1
