crates/sutura-app/tests/snapshots/anchor_report.snap
---
source: crates/sutura-app/tests/golden.rs
expression: "&report"
---
checks:
  orders_placed: Matched
  revenue: Matched
