crates/sutura-app/tests/snapshots/anchor_report@cube.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: "&report"
---
checks:
  active_subscriptions: Matched
  churn_rate: Matched
  recurring_revenue: Matched
  subscription_base: Matched
  subscription_months_billed: Matched
  subscriptions_churned: Matched
