crates/sutura-app/tests/snapshots/anchor_report@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: "&report"
---
checks:
  orders_placed: Matched
  revenue: Matched
