crates/sutura-app/tests/snapshots/catalog_definitions@cube.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
expression: pinned.definitions()
---
models:
  customers:
    name: customers
    source: local
    table: customers
    columns:
      customer_key:
        name: customer_key
        data_type: number
        description: The surrogate key every fact table joins on.
        nullable: ~
      region:
        name: region
        data_type: string
        description: Which of the five regions this customer is in.
        nullable: ~
      segment:
        name: segment
        data_type: string
        description: "The commercial segment of the customer - business, consumer or wholesale."
        nullable: ~
    primary_key:
      - customer_key
    description: "One row per customer, holding the attributes an answer may be grouped by."
  daily_usage:
    name: daily_usage
    source: local
    table: daily_usage
    columns:
      subscription_key:
        name: subscription_key
        data_type: number
        description: The subscription this usage belongs to.
        nullable: ~
      usage_date:
        name: usage_date
        data_type: time
        description: The day this row of usage was recorded on.
        nullable: ~
    primary_key:
      - subscription_key
      - usage_date
    description: One row per subscription per day on which it used anything.
  products:
    name: products
    source: local
    table: products
    columns:
      product_family:
        name: product_family
        data_type: string
        description: Which of the four product families this tariff belongs to.
        nullable: ~
      product_key:
        name: product_key
        data_type: number
        description: The surrogate key subscriptions join on.
        nullable: ~
      product_name:
        name: product_name
        data_type: string
        description: "The tariff's own name."
        nullable: ~
    primary_key:
      - product_key
    description: One row per tariff.
  regions:
    name: regions
    source: local
    table: regions
    columns:
      region:
        name: region
        data_type: string
        description: "The join key, the same text customers.region holds."
        nullable: ~
      sales_area:
        name: sales_area
        data_type: string
        description: The sales area this region rolls up into.
        nullable: ~
    primary_key:
      - region
    description: "One row per region, and the sales area it rolls up into."
  subscriptions:
    name: subscriptions
    source: local
    table: subscriptions
    columns:
      churned_in_month:
        name: churned_in_month
        data_type: boolean
        description: "Whether this subscription churned during the month, independent of its end-of-month status."
        nullable: ~
      contract_term:
        name: contract_term
        data_type: string
        description: "The subscription's own contract length - annual or monthly."
        nullable: ~
      month:
        name: month
        data_type: time
        description: The first day of the month this snapshot row describes.
        nullable: ~
      status:
        name: status
        data_type: string
        description: "The subscription's state at the end of the month - active or terminated."
        nullable: ~
      subscription_key:
        name: subscription_key
        data_type: number
        description: "The surrogate key daily_usage joins on, through usage_subscription."
        nullable: ~
    primary_key:
      - month
      - subscription_key
    description: One row per subscription per month - the monthly snapshot of every subscription.
relationships: {}
metrics: {}
