crates/sutura-app/tests/snapshots/catalog_definitions@datahub.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
assertion_line: 36
expression: pinned.definitions()
---
models:
  customers:
    name: customers
    source: local
    table: dim_customer
    columns:
      - customer_id
      - segment
    description: The customer dimension.
  orders:
    name: orders
    source: local
    table: fct_order
    columns:
      - amount_cents
      - customer_id
      - order_date
      - order_id
      - status
    description: "Net revenue orders, in minor units."
relationships:
  orders_to_customer:
    name: orders_to_customer
    origin_model: orders
    origin_column: customer_id
    target_model: customers
    target_column: customer_id
    join_type: many_to_one
metrics:
  revenue:
    name: revenue
    model: orders
    measure:
      simple:
        aggregate: sum
        column: amount_cents
    required_filters:
      - equals:
          column: status
          value: active
    time_column: order_date
    grains:
      - month
    dimensions:
      segment:
        name: segment
        column: segment
        via: orders_to_customer
        allowed_values:
          - retail
          - wholesale
        description: "The customer's segment."
    anchor:
      range:
        start: 2026-06-01
        end: 2026-07-01
      value: "412345"
    description: "Net revenue in minor units, from active orders."
    audience: Open
