crates/sutura-app/tests/snapshots/catalog_definitions@openmetadata.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
assertion_line: 36
expression: pinned.definitions()
---
models:
  customers:
    name: customers
    source: local
    table: customers
    columns:
      - customer_id
      - segment
    description: The customer dimension.
  orders:
    name: orders
    source: local
    table: orders
    columns:
      - amount_cents
      - customer_id
      - order_date
      - order_id
      - status
    description: "Net revenue orders, in minor units."
relationships:
  orders_to_customer:
    name: orders_to_customer
    origin_model: orders
    target_model: customers
    keys:
      - Equal:
          origin: customer_id
          target: customer_id
    join_type: one_to_many
metrics: {}
