crates/sutura-app/tests/snapshots/catalog_definitions@rdbms.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
expression: pinned.definitions()
---
models:
  customers:
    name: customers
    source: local
    table: public.customers
    columns:
      customer_id:
        name: customer_id
        data_type: bigint
        description: ""
        nullable: ~
      segment:
        name: segment
        data_type: ~
        description: ""
        nullable: ~
    primary_key:
      - customer_id
    description: Customer reference data.
  orders:
    name: orders
    source: local
    table: public.orders
    columns:
      amount_cents:
        name: amount_cents
        data_type: integer
        description: "The order total, in minor units."
        nullable: ~
      customer_id:
        name: customer_id
        data_type: ~
        description: ""
        nullable: ~
      order_id:
        name: order_id
        data_type: bigint
        description: ""
        nullable: ~
      status:
        name: status
        data_type: ~
        description: ""
        nullable: ~
    primary_key:
      - order_id
    description: Orders placed by customers. One row per order.
relationships:
  orders_customer_fk__0877fc1bfb1427b4:
    name: orders_customer_fk__0877fc1bfb1427b4
    origin_model: orders
    origin_column: customer_id
    target_model: customers
    target_column: customer_id
    join_type: many_to_one
metrics: {}
